# HPC

./: CMakeLists.txt  README.md  gpu.cu  gpu.md  hello  memwidth.cpp  mpi_matmul  mpi_matmul.c  mpi_matmul.cpp  mpiomp_matmul  mpiomp_matmul.c  multhread_protected.cpp  multhread_unprotected.cpp  ompmatmul.cpp  performance_results.csv  performency.cpp  ptmatmul.cpp  result.md  work3.cpp
