project(HPC LANGUAGES CXX C CUDA)
cmake_minimum_required(VERSION 3.20)

find_package(OpenMP REQUIRED)
find_package(MPI REQUIRED)
find_package(CUDAToolkit REQUIRED)
add_compile_options(-mavx2 -mfma -fopenmp -pthread)
if(CMAKE_BUILd_TYPE STREQUAL "Debug")
    add_compile_options(-g)
endif(CMAKE_BUILd_TYPE STREQUAL "Debug")

add_executable(performency performency.cpp)
add_executable(memwidth memwidth.cpp)
add_executable(multhread_unprotected multhread_unprotected.cpp)
add_executable(multhread_protected multhread_protected.cpp)
add_executable(ptmatmul ptmatmul.cpp)
add_executable(ompmatmul ompmatmul.cpp)
target_link_libraries(ompmatmul OpenMP::OpenMP_CXX)
add_executable(work3 work3.cpp)
target_link_libraries(work3 OpenMP::OpenMP_CXX)
add_executable(mpi_matmul mpi_matmul.c)
target_link_libraries(mpi_matmul MPI::MPI_CXX)
set(CMAKE_CUDA_ARCHITECTURES 86)
add_executable(gpu gpu.cu)
target_link_libraries(gpu CUDA::cublas CUDA::cudart)
